Issue #8: JDK11 logging analysis.